# oom-tracer

./: .gitignore  Cargo.toml  LICENSE.BSD-2-Clause  NOTES.md  build.rs
src/: main.rs
src/bpf/: mod.rs  oomkill.bpf.c  oomkill.h  oomkill.skel.rs  vmlinux.h
src/leak/: Dockerfile  deploy.yaml  main.c
