[package]
name = "oom-tracer"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1-only OR BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
libbpf-rs = "0.19.1"
libc = "0.2.139"
plain = "0.2.3"
time = { version = "0.3.20", features = ["formatting", "local-offset", "macros"] }

[build-dependencies]
libbpf-cargo = "0.13.1"
